RESOLVED FIXED160469
[Mac] media/pip-video-going-into-fullscreen.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=160469
Summary [Mac] media/pip-video-going-into-fullscreen.html is a flaky failure
Ada Chan
Reported 2016-08-02 15:04:57 PDT
media/pip-video-going-into-fullscreen.html is flaky. @@ -3,7 +3,6 @@ Going into Picture-in-Picture EXPECTED (video.webkitPresentationMode == 'picture-in-picture') OK Going into Full Screen from Picture-in-Picture -EXPECTED (document.webkitCurrentFullScreenElement == '[object HTMLVideoElement]') OK -EXPECTED (video.webkitPresentationMode == 'fullscreen') OK +Presentation mode changes more than once going into fullscreen from picture-in-picture. FAIL END OF TEST  It looks like when we go from Picture-in-Picture to Fullscreen on Mac, the presentation mode changes from "picture-in-picture" to "fullscreen", and then from "fullscreen" to "inline".
Attachments
Patch (11.36 KB, patch)
2016-08-02 16:25 PDT, Ada Chan
no flags
Patch (13.20 KB, patch)
2016-08-02 16:50 PDT, Ada Chan
eric.carlson: review+
Ada Chan
Comment 1 2016-08-02 15:05:22 PDT
Ada Chan
Comment 2 2016-08-02 16:25:17 PDT
Ada Chan
Comment 3 2016-08-02 16:50:51 PDT
Ada Chan
Comment 4 2016-08-02 16:51:56 PDT
Updated patch to stop marking media/pip-video-going-into-fullscreen.html as flaky.
Eric Carlson
Comment 5 2016-08-03 10:38:06 PDT
Comment on attachment 285161 [details] Patch Thanks Ada!
Ada Chan
Comment 6 2016-08-03 11:14:19 PDT
Note You need to log in before you can comment on or make changes to this bug.